--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,7 @@ body {
 .hobby {
   background-color: rgba(255, 0, 0, 0.4);
   border-color: darkred;
+  text-align: center;
 }
 .hobby ul {
   padding: 5px 30px;
@@ -82,6 +83,7 @@ body {
 }
 
 .jobs {
+  text-align: center;
   background-color: rgba(144, 238, 144, 0.5);
   border-color: darkgreen;
   padding: 10px;
@@ -183,4 +185,35 @@ a:visited {
 .btn:active {
   background-color: green;
   color: black;
+}
+
+@media (max-width: 700px) {
+  .container {
+    text-align: center;
+    width: 300px;
+    margin: 30px;
+  }
+  .main {
+    padding: 10px;
+  }
+  .img {
+    display: inline-block;
+    margin: auto;
+    width: 100%;
+  }
+  #mainpic {
+    width: 50%;
+  }
+  .text {
+    display: block;
+    margin: auto;
+  }
+  .jobs table {
+    border-spacing: 2px;
+    height: 150px;
+  }
+  .jobs table td,
+  .jobs table th {
+    font-size: 14px;
+  }
 }
